# hello-vcpkg

./: .gitignore  CMakeLists.txt  Makefile  main.cxx  vcpkg.json
